tests/fixtures/invalid/none_pow_bool.py
# Cannot power None and Bool
x: None = None ** True
